infrastructure/gateway/resources/primary-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: primary-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: primary-gateway-proxy

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: All

    - name: http-alt
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
